[package]
name = "i18n-string"
version = "1.1.2"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
debug-assertions = false

[features]
std = []
serde = ["dep:serde"]
default = ["std"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
