[package]
name = "i18n-string"
version = "2.0.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
debug-assertions = false

[features]
std = []
serde = ["dep:serde", "compact_str/serde"]
default = ["std"]

[dependencies]
compact_str = { version = "0.9", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
