[package]
name = "i18n-string"
version = "2.0.1"
edition = "2024"
license = "MIT"
description = "A lightweight and flexible Rust library for handling internationalization strings with template support."
repository = "https://github.com/Kr328/i18n-string-rs"
readme = "README.md"
keywords = ["i18n", "internationalization", "localization", "template"]
categories = ["internationalization", "localization"]

[profile.release]
opt-level = 3
lto = true
debug-assertions = false

[features]
std = []
serde = ["dep:serde", "compact_str/serde"]
default = ["std"]

[dependencies]
compact_str = { version = "0.9", default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
